--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/Images/sl1.webp" class="d-block w-100" alt="...">
+                    <img src="https://www.boat-lifestyle.com/cdn/shop/files/alpha_desktop_999_1440x.jpg?v=1688544511" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/Images/sl2.webp" class="d-block w-100" alt="...">
+                    <img src="https://www.boat-lifestyle.com/cdn/shop/files/ultima-connect_desktop_1999_1440x.jpg?v=1688452651" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/Images/sl3.webp" class="d-block w-100" alt="...">
+                    <img src="https://www.boat-lifestyle.com/cdn/shop/files/SASS_DESKTOP_1440x.jpg?v=1686545976" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
