--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
 
     <div class="best-sellor">
         <div class="box-content box">
-            <div class="box-img" style="background-image: url('/Images/smartwatch1.webp');"></div>
+            <div class="box-img" style="background-image: url('https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Ultima-Call-Max-Shot-4.1_2.png?v=1685616323');"></div>
             <a href="#">Smartwatch</a>
         </div>
         <div class="box-content box">
-            <div class="box-img" style="background-image: url('/Images/bs2.gif');"></div>
+            <div class="box-img" style="background-image: url('https://cdn.shopify.com/s/files/1/0057/8938/4802/files/AD125_Lifestyle-render.jpg?v=1686045714');"></div>
             <a href="#">Wireless Earbuds</a>
         </div>
         <div class="box-content box">
-            <div class="box-img" style="background-image: url('/Images/bs3.webp');"></div>
+            <div class="box-img" style="background-image: url('https://www.boat-lifestyle.com/cdn/shop/products/R…71b4-47a4-84e5-c3fb8da4fe82_800x.jpg?v=1655378031');"></div>
             <a href="#">NeckBands</a>
         </div>
         <div class="box-content box">
-            <div class="box-img" style="background-image: url('/Images/bs4.webp');"></div>
+            <div class="box-img" style="background-image: url('https://www.boat-lifestyle.com/cdn/shop/files/original-imagg5ndw9gf8bzs_416x.webp?v=1685709621');"></div>
             <a href="#">HeadPhones</a>
         </div>
     </div>
