--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a href="#">Wireless Earbuds</a>
         </div>
         <div class="box-content box">
-            <div class="box-img" style="background-image: url('https://www.boat-lifestyle.com/cdn/shop/products/R…71b4-47a4-84e5-c3fb8da4fe82_800x.jpg?v=1655378031');"></div>
+            <div class="box-img" style="background-image: url('https://www.boat-lifestyle.com/cdn/shop/files/original-imagg2y8hjjmeqjm_416x.webp?v=1685701371');"></div>
             <a href="#">NeckBands</a>
         </div>
         <div class="box-content box">
